--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,9 +1,13 @@
 {
   "name": "@repo/ui",
   "version": "0.0.0",
-  "type": "module",
+  
   "private": true,
   "exports": {
+    "./text-input": "./src/text-input.tsx",
+    "./select": "./src/select.tsx",
+    "./center": "./src/center.tsx",
+    "./appbar": "./src/appbar.tsx",
     "./button": "./src/button.tsx",
     "./card": "./src/card.tsx",
     "./code": "./src/code.tsx"
